updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm awful at these and do not have anything to say here :)</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Palo Alto, CA</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Painting, hiking, cooking</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Traveling the world</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Palo Alto, CA</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I began learning learning some basics in web development in undergrad and really enjoyed it but did not think I could switch paths at that point and now I have decided I want to invest the time to learn more about this field</p>
     </section>
 
     <footer id="footer">
