correcting typos in details

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <h1>Where do you live?</h1>
       <p>Palo Alto, CA</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>I began learning learning some basics in web development in undergrad and really enjoyed it but did not think I could switch paths at that point and now I have decided I want to invest the time to learn more about this field</p>
+      <p>I began learning a bit of web development in undergrad and really enjoyed it but did not think I could switch paths at that point and now I have decided I want to invest the time to learn more about this field</p>
     </section>
 
     <footer id="footer">
